--- a/components/global/Product/Product.module.scss
+++ b/components/global/Product/Product.module.scss
@@ -1,24 +1,31 @@
 .product {
     position: relative;
-    display: block;
-    flex-grow: 1;
+    display: inline-block;
+    flex-grow: 3;
     flex-shrink: 1;
     margin: 0 auto 20px auto;
-    max-width: 90%;
+    // width: 90%;
     @media(min-width: 1024px){
-        width: 28%;
-        margin: 0 15px 20px 15px;
+        max-width: 31%;
+        margin: 0 1% 20px 1%;
     }
 
-    @media (min-width: 768px) {
-        margin: 0 15px 20px 15px;
-        max-width: 45%;
+    @media (min-width: 668px) {
+        margin: 0 1% 20px 1%;
+        max-width: 48%;
     }
+
 
     &__image {
-        img {
-            width: 100%;
-            height: 300px;
+        width: 100%;
+        height: 250px;
+
+        @media(min-width: 1024px) {
+            height: 250px;
+        }
+
+        @media (min-width: 768px) {
+            height: 200px;
         }
     }
 
