add admin page | adding type and subtype | add redux state

--- a/Client/styles/aplication/_header.scss
+++ b/Client/styles/aplication/_header.scss
@@ -263,6 +263,13 @@
                 font-size: 20px;
             }
           }
+
+          .admin {
+            color: white;
+            margin-bottom: 5px;
+            margin-left: 5px;
+            cursor: pointer;
+          }
         }
       }      
 }
