--- a/Client/styles/globals.scss
+++ b/Client/styles/globals.scss
@@ -14,4 +14,5 @@ ul{
   position: relative;
   min-height: 100vh;
 }
-@import './aplication/footer'
+@import './aplication/footer';
+@import './aplication/auth'
