add feature of adding products

--- a/Client/pages/admin/admin.module.scss
+++ b/Client/pages/admin/admin.module.scss
@@ -63,6 +63,15 @@
                 font-weight: 600;
             }
         }
+
+        .info_fields {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            input {
+                width: 48%;
+            }
+        }
     }
     
     
