--- a/Client/components/global/Product/Product.module.scss
+++ b/Client/components/global/Product/Product.module.scss
@@ -1,172 +1,174 @@
 .product {
+  position: relative;
+  display: inline-block;
+  flex: 1 0 90%;
+  margin: 0 auto 20px auto;
+  //   max-width: 90%;
+  @media (min-width: 668px) {
+    margin: 0 1% 20px 1%;
+    flex: 1 0 48%;
+  }
+
+  @media (min-width: 1024px) {
+    flex: 0 0 31%;
+    margin: 0 1% 20px 1%;
+  }
+
+  @media (min-width: 1300px) {
+    flex: 0 0 23%;
+    margin: 0 1% 20px 1%;
+  }
+
+  &__image {
+    width: 100%;
+    height: 250px;
+
+    @media (min-width: 1024px) {
+      height: 250px;
+    }
+
+    @media (min-width: 768px) {
+      height: 200px;
+    }
+  }
+
+  &__name {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 700;
+    font-style: italic;
+    margin: 10px 0;
+    letter-spacing: 0.03em;
+  }
+
+  &__properties {
     position: relative;
-    display: inline-block;
-    flex-grow: 1;
-    margin: 0 auto 20px auto;
-    max-width: 90%;
-    @media (min-width: 668px) {
-        margin: 0 1% 20px 1%;
-        max-width: 48%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    div {
+      width: 100%;
     }
 
-    @media(min-width: 1024px){
-        max-width: 31%;
-        margin: 0 1% 20px 1%;
+    &__title {
+      display: flex;
+      justify-content: center;
+      background: rgba(128, 128, 128, 0.7);
+      padding: 5px 0;
     }
 
-    
+    &__body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+  }
 
+  &__actions {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
 
-    &__image {
-        width: 100%;
-        height: 250px;
+    &__cost {
+      position: relative;
+      display: flex;
+      justify-content: space-between;
+    }
 
-        @media(min-width: 1024px) {
-            height: 250px;
+    .current_cost {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 600;
+      font-size: 20px;
+    }
+    .cost_actions {
+      position: relative;
+      display: flex;
+      .input {
+        display: flex;
+        input {
+          text-align: center;
+          width: 45px;
+          height: 45px;
+          padding: 0;
+          border: none;
+          outline: none;
         }
 
-        @media (min-width: 768px) {
-            height: 200px;
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+          -webkit-appearance: none;
         }
-    }
 
-    &__name {
-        text-align: center;
-        font-size: 16px;
-        font-weight: 700;
-        font-style: italic;
-        margin: 10px 0;
-        letter-spacing: 0.03em;
-    }
-
-    &__properties {
+        input[type="number"],
+        input[type="number"]:hover,
+        input[type="number"]:focus {
+          appearance: none;
+          -moz-appearance: textfield;
+        }
+      }
+      .total_cost {
         position: relative;
         display: flex;
-        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        
-        div {
-            width: 100%;
-        }
-
-        &__title {
-            display: flex;
-            justify-content: center;
-            background: rgba(128, 128, 128, 0.7);
-            padding: 5px 0;
-        }
-
-        &__body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            flex-wrap: wrap;
-        }
+        font-size: 14px;
+        padding: 0 5px;
+        margin-left: 1px;
+        width: 75px;
+        height: 45px;
+        background: black;
+        color: white;
+      }
     }
 
-    &__actions {
-        position: relative;
+    .quntity_shifts {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      button {
         display: flex;
-        flex-direction: column;
-        margin-top: 20px;
-
-        &__cost {
-            position: relative;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .current_cost {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-weight: 600;
-            font-size: 20px;
-        }
-        .cost_actions {
-            position: relative;
-            display: flex;
-            .input {
-                display: flex;
-                input {
-                    text-align: center;
-                    width: 45px;
-                    height: 45px;
-                    padding: 0;
-                    border: none;
-                    outline: none;
-                }
-
-                input[type="number"]::-webkit-outer-spin-button,
-                input[type="number"]::-webkit-inner-spin-button {
-                    -webkit-appearance: none;
-                }
-
-                input[type='number'],
-                input[type="number"]:hover,
-                input[type="number"]:focus {
-                    appearance: none;
-                    -moz-appearance: textfield;
-                }
-            }
-            .total_cost {
-                position: relative;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-size: 14px;
-                padding: 0 5px;
-                margin-left: 1px;
-                width: 75px;
-                height: 45px;
-                background: black;
-                color: white;
-            }
-        }
-
-        .quntity_shifts {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            button {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                background: black;
-                color: white;
-                border: none;
-                outline: none;
-                height: 22px;
-                width: 22px;
-                cursor: pointer;
-            }
-        }
-
-        &__button {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 50px;
-            margin-top: 5px;
-            border: none;
-            outline: none;
-            background: black;
-            color: white;
-            cursor: pointer;
-        }
+        justify-content: center;
+        align-items: center;
+        background: black;
+        color: white;
+        border: none;
+        outline: none;
+        height: 22px;
+        width: 22px;
+        cursor: pointer;
+      }
     }
+
+    &__button {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+      margin-top: 5px;
+      border: none;
+      outline: none;
+      background: black;
+      color: white;
+      cursor: pointer;
+    }
+  }
 }
 
 .catalog {
+  position: relative;
+  width: 95%;
+  margin: 0 auto;
+  &__grid {
     position: relative;
-    width: 95%;
-    margin: 0 auto;
-    &__grid {
-        position: relative;
-        display: flex;
-        justify-content: flex-start;
-        flex-wrap: wrap;
-    }
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
 }
