--- a/Client/pages/admin/admin.module.scss
+++ b/Client/pages/admin/admin.module.scss
@@ -41,28 +41,7 @@
     }
 
     .product {
-        .image_preview {
-            img {
-                width: 100%;
-                height: 500px;
-                object-fit: cover;
-                object-position: 50% 50%; 
-                margin: 0 auto;
-            }
-            button {
-                margin: 5px 0 20px 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 100%;
-                height: 30px;
-                background: black;
-                color: white;
-                cursor: pointer;
-                text-transform: uppercase;
-                font-weight: 600;
-            }
-        }
+        
 
         .info_fields {
             position: relative;
@@ -70,6 +49,121 @@
             justify-content: space-between;
             input {
                 width: 48%;
+            }
+        }
+
+        &__avatar {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 300px;
+            height: 500px;
+            border: 1px solid black;
+            border-radius: 25px;
+
+            &__container {
+                position: relative;
+                div svg,p {
+                     cursor: pointer;
+                     font-size: 18px;
+                     font-weight: 600;
+                }
+                .image_preview {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
+                    img {
+                        width: 100%;
+                        height: 500px;
+                        margin-top: 6px;
+                        border-radius: 25px;
+                        object-fit: cover;
+                        object-position: 50% 50%; 
+                    }
+                    button {
+                        position: absolute;
+                        top: 103%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 100%;
+                        height: 30px;
+                        background: black;
+                        color: white;
+                        cursor: pointer;
+                        text-transform: uppercase;
+                        font-weight: 600;
+                    }
+                }
+            }
+        }
+
+        &__galery {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            
+            margin-top: 80px;
+            width: 300px;
+            &__tumbs {
+                position: relative;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: start;
+                width: 300px;
+                height: auto;
+                .image_preview {
+                    position: relative;
+                    flex: 0 0 31%;
+                    margin: 0 1%;
+                    img {
+                        width: 100%;
+                        height: 140px;
+                        object-fit: cover;
+                        cursor: pointer;
+                    }
+                    button {
+                        position: absolute;
+                        top: 5px;
+                        right: 5px;
+                        background: transparent;
+                        outline: none;
+                        border: none;
+                        svg {
+                            height: 15px;
+                            width: 15px;
+                            fill: red;
+                            transition: all .2s ease-out;
+                            cursor: pointer;
+                            &:hover {
+                                height: 17px;
+                                width: 17px;
+                            }
+                        }
+                    }
+                }
+            }
+            &__container {
+                position: relative;
+                div {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    svg,p {
+                        cursor: pointer;
+                        font-size: 18px;
+                        font-weight: 600;
+                   }
+                   svg {
+                        width: 150px;
+                        height: 130px;
+                        
+                   }
+                } 
             }
         }
     }
