--- a/Client/pages/admin/admin.module.scss
+++ b/Client/pages/admin/admin.module.scss
@@ -38,17 +38,54 @@
         cursor: pointer;
         text-transform: uppercase;
         font-weight: 600;
+        border: none;
+        &:disabled {
+            opacity: .8;
+        }
+    }
+    button {
+            width: 300px;
+            height: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: black;
+            color: white;
+            cursor: pointer;
+            text-transform: uppercase;
+            font-weight: 600;
+            border: none;
+            &:disabled {
+                opacity: .8;
+            }
+
+            &.margin{
+                margin-bottom: 25px;
+            }
     }
 
     .product {
         
-
-        .info_fields {
+        &__info_fields {
             position: relative;
             display: flex;
+            width: 300px;
             justify-content: space-between;
+            margin-bottom: 25px;
             input {
-                width: 48%;
+                width: 43%;
+            }
+            button {
+                position: relative;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: transparent;
+                width: 30px;
+                height: 30px;
+                svg {
+                    fill:  red;
+                }
             }
         }
 
@@ -165,6 +202,13 @@
                    }
                 } 
             }
+        }
+
+        &__categories_steps {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            margin: 30px 0;
         }
     }
     
