--- a/Client/pages/admin/admin.module.scss
+++ b/Client/pages/admin/admin.module.scss
@@ -166,7 +166,10 @@
                         position: absolute;
                         top: 5px;
                         right: 5px;
+                        width: 25px;
+                        height: 25px;
                         background: transparent;
+                        cursor: pointer;
                         outline: none;
                         border: none;
                         svg {
